Revision history for Dist-Zilla-App-Command-shell.

0.001    2011-11-27    Olivier Mengué (DOLMEN)
	First release.
	My first real use of Dist::Zilla was at the QA Hackathon 2011 in
	  Amsterdam, and since that day I needed this extension.